--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <!-- Save the Date -->
       <div class="video-box">
         <video controls autoplay muted loop>
-          <source src="Save The Date.mp4" type="video/mp4">
+          <source src="savethedate.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
@@ -276,3 +276,4 @@
 
 </body>
 </html>
+
