--- a/index.html
+++ b/index.html
@@ -178,17 +178,17 @@
     <div class="location-container">
       <!-- Church -->
       <div class="location-card">
-        <img src="church.jpg" alt="Church">
-        <h3>Ceremony</h3>
+        <img src="Church.jpg" alt="Church">
+        <h3>Our Lady of Lourdes Parish</h3>
         <p>Our wedding ceremony will be held at the church.</p>
-        <a class="guide-btn" href="https://maps.google.com/?q=church+location" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
       </div>
       <!-- Reception -->
       <div class="location-card">
-        <img src="reception.jpg" alt="Reception">
-        <h3>Reception</h3>
+        <img src="Reception.jpg" alt="Reception">
+        <h3>Fruella's Events Venue</h3>
         <p>Join us for the celebration at the reception venue.</p>
-        <a class="guide-btn" href="https://maps.google.com/?q=reception+location" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps/place/Fruella's+Events+Venue+Tagaytay/@14.1328031,120.9266371,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd796d1fd7f119:0x5fccd52277bc6f1!8m2!3d14.1327979!4d120.931508!16s%2Fg%2F11v0gyk507?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
       </div>
     </div>
   </section>
@@ -276,4 +276,5 @@
 
 </body>
 </html>
+
 
