--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="location-container">
       <!-- Church -->
       <div class="location-card">
-        <img src="Church.jpg" alt="Church">
+        <img src="Church.mp4" alt="Church">
         <h3>Our Lady of Lourdes Parish</h3>
         <p>Our wedding ceremony will be held at the church.</p>
         <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
@@ -276,5 +276,6 @@
 
 </body>
 </html>
+
 
 
