--- a/index.html
+++ b/index.html
@@ -236,12 +236,9 @@
         </video>
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
-      <!-- Entourage Video -->
+      <!-- Entourage Image -->
       <div class="video-box">
-        <video controls>
-          <source src="Entourage.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <img src="Entourage List.jpg" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -276,6 +273,7 @@
 
 </body>
 </html>
+
 
 
 
