--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div>
       <!-- Entourage Image -->
       <div class="video-box">
-        <img src="entourage list.jpg" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
+        <img src="entourage-list.jpg" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -273,6 +273,7 @@
 
 </body>
 </html>
+
 
 
 
