--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
       color: #ffddaa;
       font-style: italic;
     }
+    /* Responsive image for mood board */
+    .moodboard-item img {
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -163,7 +168,6 @@
     </nav>
   </header>
 
-  <!-- Event Section -->
   <section id="event">
     <div id="countdown"></div>
     <div id="calendar">
@@ -171,19 +175,16 @@
     </div>
   </section>
 
-  <!-- Location Section -->
   <section id="location">
     <h2>Location</h2>
     <div class="divider"></div>
     <div class="location-container">
-      <!-- Church -->
       <div class="location-card">
         <img src="church.jpg" alt="Church">
         <h3>Our Lady of Lourdes Parish</h3>
         <p>Our wedding ceremony will be held at the church.</p>
         <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
       </div>
-      <!-- Reception -->
       <div class="location-card">
         <img src="reception.jpg" alt="Reception">
         <h3>Fruella's Events Venue</h3>
@@ -193,7 +194,6 @@
     </div>
   </section>
 
-  <!-- Mood Board Section -->
   <section id="moodboard">
     <h2>Mood Board & Color Motifs</h2>
     <div class="divider"></div>
@@ -209,7 +209,6 @@
     </div>
   </section>
 
-  <!-- RSVP Section -->
   <section id="rsvp">
     <h2>RSVP</h2>
     <div class="divider"></div>
@@ -223,12 +222,10 @@
     <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
   </section>
 
-  <!-- Save the Date + Entourage Section -->
   <section id="savethedate">
     <h2>Save the Date & Entourage</h2>
     <div class="divider"></div>
     <div class="video-container">
-      <!-- Save the Date -->
       <div class="video-box">
         <video controls autoplay muted loop>
           <source src="savethedate.mp4" type="video/mp4">
@@ -236,9 +233,8 @@
         </video>
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
-      <!-- Entourage Image -->
       <div class="video-box">
-        <img src="entourage-list.png" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
+        <img src="entourage-list.jpg" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -273,12 +269,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
