--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
       max-width: 100%;
       height: auto;
     }
+    /* Media query to stack images on smaller screens */
+    @media (max-width: 768px) {
+      .video-box {
+        max-width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
