--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
       <div class="video-box">
-        <img src="entourage-list.jpg" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
+        <img src="entourage-list.png" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -275,3 +275,4 @@
 
 </body>
 </html>
+
