--- a/index.html
+++ b/index.html
@@ -145,15 +145,18 @@
       color: #ffddaa;
       font-style: italic;
     }
-    /* Responsive image for mood board */
-    .moodboard-item img {
+    /* Responsive image for mood board and entourage list */
+    .moodboard-item img, .video-box img {
       max-width: 100%;
       height: auto;
     }
-    /* Media query to stack images on smaller screens */
+    /* Media query to stack elements on smaller screens */
     @media (max-width: 768px) {
       .video-box {
         max-width: 100%;
+      }
+      body {
+        background-attachment: scroll;
       }
     }
   </style>
@@ -168,9 +171,6 @@
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
-      <a href="#registry">Registry</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -240,7 +240,7 @@
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
       <div class="video-box">
-        <img src="entourage-list.png" alt="Our Entourage" style="width:100%; max-width:700px; border-radius:10px;">
+        <img src="entourage-list.jpg" alt="Our Entourage">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -275,4 +275,3 @@
 
 </body>
 </html>
-
