--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
   <header>
     <h1>Aaron & Jade</h1>
+    <p class="tagline">Under the twilight sky, we say "I Do".</p>
     <p class="tagline">Amid the whispers of the woods, we promise forever.</p>
     <nav>
       <a href="#event">Event</a>
@@ -275,3 +276,4 @@
 
 </body>
 </html>
+
