--- a/index.html
+++ b/index.html
@@ -165,13 +165,15 @@
 
   <header>
     <h1>Aaron & Jade</h1>
-    <p class="tagline">Under the twilight sky, we say "I Do".</p>
     <p class="tagline">Amid the whispers of the woods, we promise forever.</p>
     <nav>
       <a href="#event">Event</a>
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
+      <a href="#registry">Registry</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -276,4 +278,3 @@
 
 </body>
 </html>
-
