--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <header>
     <h1>Aaron & Jade</h1>
-    <p class="tagline">Amid the whispers of the woods, we promise forever.</p>
+<p class="tagline">Under the twilight sky, we say "I Do",<br>Amid the whispers of the woods, we promise forever.</p>
     <nav>
       <a href="#event">Event</a>
       <a href="#rsvp">RSVP</a>
@@ -275,4 +275,5 @@
 
 </body>
 </html>
+
 
