--- a/index.html
+++ b/index.html
@@ -150,14 +150,26 @@
       max-width: 100%;
       height: auto;
     }
-    /* Media query to stack elements on smaller screens */
+    /* Media query to stack elements and resize fonts on smaller screens */
     @media (max-width: 768px) {
-      .video-box {
-        max-width: 100%;
-      }
-      body {
-        background-attachment: scroll;
-      }
+        /* Make fonts smaller for phones */
+        h1 {
+            font-size: 2.5rem;
+        }
+        .tagline {
+            font-size: 1.1rem;
+        }
+        /* Make content sections smaller */
+        section {
+            padding: 30px 15px;
+            margin: 15px auto;
+        }
+        .video-box {
+            max-width: 100%;
+        }
+        body {
+            background-attachment: scroll;
+        }
     }
   </style>
 </head>
@@ -165,12 +177,15 @@
 
   <header>
     <h1>Aaron & Jade</h1>
-<p class="tagline">Under the twilight sky, we say "I Do",<br>Amid the whispers of the woods, we promise forever.</p>
+    <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
     <nav>
       <a href="#event">Event</a>
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
+      <a href="#registry">Registry</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -240,7 +255,7 @@
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
       <div class="video-box">
-        <img src="entourage-list.png" alt="Our Entourage">
+        <img src="entourage-list.jpg" alt="Our Entourage">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -275,7 +290,3 @@
 
 </body>
 </html>
-
-
-
-
