--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
     section {
       padding: 40px 20px;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.3); /* Revised: Changed background opacity to 0.3 */
       margin: 20px auto;
       max-width: 1000px;
       border-radius: 10px;
@@ -255,7 +255,7 @@
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
       <div class="video-box">
-        <img src="entourage-list.jpg" alt="Our Entourage">
+        <img src="entourage-list.png" alt="Our Entourage">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
