--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background: url('Background.jpg') no-repeat center center fixed;
+      background: url('Background 2.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
@@ -288,6 +288,7 @@
 
 </body>
 </html>
+
 
 
 
