--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background: url('Background.jpg') no-repeat center center fixed;
-      background-size: cover;
       color: white;
       text-align: center;
+    }
+    .background-img {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
     }
     header {
       background: rgba(0, 0, 0, 0.5);
@@ -39,7 +46,7 @@
       padding: 40px 20px;
       background: rgba(0, 0, 0, 0.3);
       margin: 20px auto;
-      max-width: 768px;
+      max-width: 1000px;
       border-radius: 10px;
     }
     #calendar {
@@ -154,7 +161,9 @@
     @media (max-width: 768px) {
         body {
             background-attachment: scroll;
-            background-size: auto 100%; /* Revised: New mobile background size */
+        }
+        .background-img {
+            object-fit: contain;
         }
         /* Make fonts smaller for phones */
         h1 {
@@ -176,6 +185,8 @@
 </head>
 <body>
 
+  <img src="Background.jpg" class="background-img" alt="Wedding Background">
+
   <header>
     <h1>Aaron & Jade</h1>
     <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
@@ -184,6 +195,9 @@
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
+      <a href="#registry">Registry</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -253,7 +267,7 @@
         <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
       </div>
       <div class="video-box">
-        <img src="entourage-list.png" alt="Our Entourage">
+        <img src="entourage-list.jpg" alt="Our Entourage">
         <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
       </div>
     </div>
@@ -288,9 +302,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
