--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
+      background: url('Background.jpg') no-repeat center center fixed;
+      background-size: cover; /* Revised: Fills the screen on desktop, may crop edges */
       color: white;
       text-align: center;
-    }
-    .background-img {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      object-fit: cover;
     }
     header {
       background: rgba(0, 0, 0, 0.5);
@@ -160,10 +153,10 @@
     /* Media query to stack elements and resize fonts on smaller screens */
     @media (max-width: 768px) {
         body {
+            background-size: contain; /* Revised: "Zooms out" the image to fit on phones */
+            background-repeat: no-repeat;
+            background-position: center top;
             background-attachment: scroll;
-        }
-        .background-img {
-            object-fit: contain;
         }
         /* Make fonts smaller for phones */
         h1 {
@@ -184,8 +177,6 @@
   </style>
 </head>
 <body>
-
-  <img src="Background.jpg" class="background-img" alt="Wedding Background">
 
   <header>
     <h1>Aaron & Jade</h1>
