--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background: url('Background.jpg') no-repeat center center fixed;
+      background: url('Background 3.jpg') no-repeat center center fixed;
       background-size: 100% 100%; /* Stretches the image to fill the screen */
       color: white;
       text-align: center;
@@ -294,3 +294,4 @@
 
 </body>
 </html>
+
