--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
     /* Updated: All sections use the same background image */
     #event, #location, #moodboard, #rsvp, #savethedate {
-      background: url('Background.jpg') no-repeat center center fixed;
+      background: url('Background 3.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     
@@ -295,3 +295,4 @@
 
 </body>
 </html>
+
