--- a/index.html
+++ b/index.html
@@ -1,180 +1,184 @@
-<style>
-  body {
-    font-family: 'Georgia', serif;
-    margin: 0;
-    padding: 0;
-    color: white;
-    text-align: center;
-    background: url('Background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-  
-  /* Media Query for mobile devices */
-  @media (max-width: 768px) {
-    body {
-      /* Use a different background image for phones */
-      background-image: url('Background 3.jpg');
-      /* Ensure the background still covers the viewport */
-      background-size: cover;
-      /* Add this to prevent the image from repeating if it can't fill the space */
-      background-repeat: no-repeat; 
-      /* Center the image to avoid awkward cropping */
-      background-position: center center;
-    }
-    
-    h1 {
-      font-size: 2.5rem;
-    }
-    .tagline {
-      font-size: 1.1rem;
-    }
-    section {
-      padding: 30px 15px;
-      margin: 15px auto;
-    }
-    .video-box {
-      max-width: 100%;
-    }
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aaron & Jade Wedding</title>
+  <style>
+    body {
+      font-family: 'Georgia', serif;
+      margin: 0;
+      padding: 0;
+      color: white;
+      text-align: center;
+      background: url('Background 3.jpg') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+    
+    @media (max-width: 768px) {
+      body {
+        background-image: url('Background 3-mobile.jpg');
+        background-size: cover;
+        background-repeat: no-repeat; 
+        background-position: center center;
+      }
+      h1 {
+        font-size: 2.5rem;
+      }
+      .tagline {
+        font-size: 1.1rem;
+      }
+      section {
+        padding: 30px 15px;
+        margin: 15px auto;
+      }
+      .video-box {
+        max-width: 100%;
+      }
+    }
 
-  .content-container {
-    background: rgba(0, 0, 0, 0.5); 
-    min-height: 100vh;
-    padding: 1px 0;
-  }
-  header, section {
-    padding: 40px 20px;
-    margin: 20px auto;
-    max-width: 1000px;
-    border-radius: 10px;
-    background: none; 
-  }
-  header {
-    background: none;
-  }
-  nav {
-    margin: 15px 0;
-  }
-  nav a {
-    color: white;
-    margin: 0 15px;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  h1 {
-    font-size: 4rem;
-    margin-bottom: 10px;
-  }
-  .tagline {
-    font-size: 1.5rem;
-    font-style: italic;
-  }
-  
-  #calendar {
-    display: flex;
-    justify-content: center;
-  }
-  #calendar img {
-    width: 80%;
-    max-width: 700px;
-    height: auto;
-    border-radius: 8px;
-  }
-  #countdown {
-    font-size: 1.8rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-    color: #ffddaa;
-  }
-  .divider {
-    width: 60px;
-    height: 4px;
-    background: #ffddaa;
-    margin: 15px auto 25px auto;
-    border-radius: 2px;
-  }
-  .location-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-  }
-  .location-card {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 12px;
-    padding: 20px;
-    width: 300px;
-    text-align: center;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-  }
-  .location-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 15px;
-  }
-  .guide-btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #ffddaa;
-    color: black;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-  .guide-btn:hover {
-    background: #e6c799;
-  }
-  .rsvp-message {
-    font-size: 1.4rem;
-    font-style: italic;
-    font-family: 'Georgia', 'Times New Roman', serif;
-    color: #f8e6d4;
-    margin-bottom: 15px;
-  }
-  .rsvp-instruction {
-    font-size: 1rem;
-    color: #ffddaa;
-    margin-bottom: 25px;
-  }
-  .rsvp-btn {
-    display: inline-block;
-    padding: 12px 25px;
-    background: #ffddaa;
-    color: black;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-  .rsvp-btn:hover {
-    background: #e6c799;
-  }
-  .video-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    align-items: flex-start;
-  }
-  .video-box {
-    flex: 1 1 45%;
-    max-width: 45%;
-  }
-  .video-box video {
-    width: 100%;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-  }
-  .video-caption {
-    margin-top: 15px;
-    font-size: 1.1rem;
-    color: #ffddaa;
-    font-style: italic;
-  }
-  .moodboard-item img, .video-box img {
-    max-width: 100%;
-    height: auto;
-  }
-</style>
+    .content-container {
+      /* This is the critical line to fix the issue */
+      background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+      min-height: 100vh;
+      padding: 1px 0;
+    }
+    
+    header, section {
+      padding: 40px 20px;
+      margin: 20px auto;
+      max-width: 1000px;
+      border-radius: 10px;
+      background: none; 
+    }
+    
+    header {
+      background: none;
+    }
+    nav {
+      margin: 15px 0;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    h1 {
+      font-size: 4rem;
+      margin-bottom: 10px;
+    }
+    .tagline {
+      font-size: 1.5rem;
+      font-style: italic;
+    }
+    
+    #calendar {
+      display: flex;
+      justify-content: center;
+    }
+    #calendar img {
+      width: 80%;
+      max-width: 700px;
+      height: auto;
+      border-radius: 8px;
+    }
+    #countdown {
+      font-size: 1.8rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #ffddaa;
+    }
+    .divider {
+      width: 60px;
+      height: 4px;
+      background: #ffddaa;
+      margin: 15px auto 25px auto;
+      border-radius: 2px;
+    }
+    .location-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+    .location-card {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 20px;
+      width: 300px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    }
+    .location-card img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+    .guide-btn {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #ffddaa;
+      color: black;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .guide-btn:hover {
+      background: #e6c799;
+    }
+    .rsvp-message {
+      font-size: 1.4rem;
+      font-style: italic;
+      font-family: 'Georgia', 'Times New Roman', serif;
+      color: #f8e6d4;
+      margin-bottom: 15px;
+    }
+    .rsvp-instruction {
+      font-size: 1rem;
+      color: #ffddaa;
+      margin-bottom: 25px;
+    }
+    .rsvp-btn {
+      display: inline-block;
+      padding: 12px 25px;
+      background: #ffddaa;
+      color: black;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .rsvp-btn:hover {
+      background: #e6c799;
+    }
+    .video-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      align-items: flex-start;
+    }
+    .video-box {
+      flex: 1 1 45%;
+      max-width: 45%;
+    }
+    .video-box video {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    }
+    .video-caption {
+      margin-top: 15px;
+      font-size: 1.1rem;
+      color: #ffddaa;
+      font-style: italic;
+    }
+    .moodboard-item img, .video-box img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
