--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       padding: 0;
       color: white;
       text-align: center;
-      background: url('Background 3.jpg') no-repeat center center fixed;
+      background: url('Background.jpg') no-repeat center center fixed;
       background-size: cover;
       background-attachment: fixed;
     }
     
     @media (max-width: 768px) {
       body {
-        background-image: url('Background 3-mobile.jpg');
+        background-image: url('Background 3.jpg');
         background-size: cover;
         background-repeat: no-repeat; 
         background-position: center center;
@@ -39,8 +39,7 @@
     }
 
     .content-container {
-      /* This is the critical line to fix the issue */
-      background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+      background: rgba(0, 0, 0, 0.5); 
       min-height: 100vh;
       padding: 1px 0;
     }
@@ -159,7 +158,6 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
-      align-items: flex-start;
     }
     .video-box {
       flex: 1 1 45%;
@@ -182,3 +180,120 @@
     }
   </style>
 </head>
+<body>
+    <div class="content-container"> 
+    <header>
+      <h1>Aaron & Jade</h1>
+      <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
+      <nav>
+        <a href="#event">Event</a>
+        <a href="#rsvp">RSVP</a>
+        <a href="#savethedate">Save the Date</a>
+        <a href="#location">Location</a>
+        <a href="#registry">Registry</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#faq">FAQ</a>
+      </nav>
+    </header>
+
+    <section id="event">
+      <div id="countdown"></div>
+      <div id="calendar">
+        <img src="April 2026.jpg" alt="Wedding Week Calendar">
+      </div>
+    </section>
+
+    <section id="location">
+      <h2>Location</h2>
+      <div class="divider"></div>
+      <div class="location-container">
+        <div class="location-card">
+          <img src="church.jpg" alt="Church">
+          <h3>Our Lady of Lourdes Parish</h3>
+          <p>Our wedding ceremony will be held at the church.</p>
+          <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+        </div>
+        <div class="location-card">
+          <img src="reception.jpg" alt="Reception">
+          <h3>Fruella's Events Venue</h3>
+          <p>Join us for the celebration at the reception venue.</p>
+          <a class="guide-btn" href="https://www.google.com/maps/place/Fruella's+Events+Venue+Tagaytay/@14.1328031,120.9266371,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd796d1fd7f119:0x5fccd52277bc6f1!8m2!3d14.1327979!4d120.931508!16s%2Fg%2F11v0gyk507?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+      </div>
+    </div>
+    </section>
+
+    <section id="moodboard">
+      <h2>Mood Board & Color Motifs</h2>
+      <div class="divider"></div>
+      <div class="moodboard-container">
+        <div class="moodboard-item">
+          <img src="Mood Board.png" alt="Mood Board">
+          <p>Mood Board</p>
+        </div>
+        <div class="moodboard-item">
+          <img src="Color Motif.png" alt="Color Palette">
+          <p>Color Palette</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="rsvp">
+      <h2>RSVP</h2>
+      <div class="divider"></div>
+      <p class="rsvp-message">
+        We would be honored by your presence on our wedding day.<br>
+        Kindly confirm your attendance by clicking the button below:
+      </p>
+      <p class="rsvp-instruction">
+        ✦ Please make sure to enter your <strong>Full Name</strong> in the format <em>FirstName LastName (FN LN)</em> when submitting your RSVP.
+      </p>
+      <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
+    </section>
+
+    <section id="savethedate">
+      <h2>Save the Date & Entourage</h2>
+      <div class="divider"></div>
+      <div class="video-container">
+        <div class="video-box">
+          <video controls autoplay muted loop>
+            <source src="savethedate.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
+        </div>
+        <div class="video-box">
+          <img src="entourage-list.jpg" alt="Our Entourage">
+          <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
+        </div>
+      </div>
+    </section>
+
+  </div>   <script>
+    // Countdown Script
+    const countdown = document.getElementById("countdown");
+    const weddingDate = new Date("April 16, 2026 00:00:00").getTime();
+
+    function updateCountdown() {
+      const now = new Date().getTime();
+      const distance = weddingDate - now;
+
+      if (distance <= 0) {
+        countdown.innerHTML = "It's our wedding day!";
+        clearInterval(interval);
+        return;
+      }
+
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      countdown.innerHTML = `Countdown: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+    }
+
+    const interval = setInterval(updateCountdown, 1000);
+    updateCountdown();
+  </script>
+
+</body>
+</html>
