Refactor index.html for improved layout and styles
Updated the HTML structure and styles for the wedding page, including responsive design adjustments and improved countdown functionality.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background: url('Background.jpg') no-repeat center center fixed;
+      background: url('Background.jpg') no-repeat center center;
       background-size: cover;
+      background-attachment: fixed;
       color: white;
       text-align: center;
     }
@@ -37,7 +38,7 @@
     }
     section {
       padding: 40px 20px;
-      background: rgba(0, 0, 0, 0.3); /* Revised: Changed background opacity to 0.3 */
+      background: rgba(0, 0, 0, 0.3);
       margin: 20px auto;
       max-width: 1000px;
       border-radius: 10px;
@@ -122,7 +123,6 @@
     .rsvp-btn:hover {
       background: #e6c799;
     }
-    /* Save the Date & Entourage side by side */
     .video-container {
       display: flex;
       flex-wrap: wrap;
@@ -145,34 +145,36 @@
       color: #ffddaa;
       font-style: italic;
     }
-    /* Responsive image for mood board and entourage list */
     .moodboard-item img, .video-box img {
       max-width: 100%;
       height: auto;
     }
-    /* Media query to stack elements and resize fonts on smaller screens */
+
+    /* 📌 MOBILE / TABLET RESPONSIVENESS FOR BACKGROUND + TEXT */
     @media (max-width: 768px) {
-        /* Make fonts smaller for phones */
-        h1 {
-            font-size: 2.5rem;
-        }
-        .tagline {
-            font-size: 1.1rem;
-        }
-        /* Make content sections smaller */
-        section {
-            padding: 30px 15px;
-            margin: 15px auto;
-        }
-        .video-box {
-            max-width: 100%;
-        }
-        body {
-            background-attachment: scroll;
-        }
+      h1 {
+        font-size: 2.5rem;
+      }
+      .tagline {
+        font-size: 1.1rem;
+      }
+      section {
+        padding: 30px 15px;
+        margin: 15px auto;
+      }
+      .video-box {
+        max-width: 100%;
+      }
+      /* FIX background behavior on phones */
+      body {
+        background-attachment: scroll !important;
+        background-size: cover;
+        background-position: center;
+      }
     }
   </style>
 </head>
+
 <body>
 
   <header>
@@ -204,13 +206,13 @@
         <img src="church.jpg" alt="Church">
         <h3>Our Lady of Lourdes Parish</h3>
         <p>Our wedding ceremony will be held at the church.</p>
-        <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
       </div>
       <div class="location-card">
         <img src="reception.jpg" alt="Reception">
         <h3>Fruella's Events Venue</h3>
         <p>Join us for the celebration at the reception venue.</p>
-        <a class="guide-btn" href="https://www.google.com/maps/place/Fruella's+Events+Venue+Tagaytay/@14.1328031,120.9266371,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd796d1fd7f119:0x5fccd52277bc6f1!8m2!3d14.1327979!4d120.931508!16s%2Fg%2F11v0gyk507?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
       </div>
     </div>
   </section>
@@ -262,7 +264,6 @@
   </section>
 
   <script>
-    // Countdown Script
     const countdown = document.getElementById("countdown");
     const weddingDate = new Date("April 16, 2026 00:00:00").getTime();
 
