--- a/index.html
+++ b/index.html
@@ -1,89 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Enchanted Wedding</title>
+font-family: 'Georgia', serif;
+margin: 0;
+padding: 0;
+      background: url('Background.jpg') no-repeat center center fixed;
+      background: url('Background.jpg') no-repeat center center;
+background-size: cover;
+      background-attachment: fixed;
+color: white;
+text-align: center;
+}
+@@ -37,7 +38,7 @@
+}
+section {
+padding: 40px 20px;
+      background: rgba(0, 0, 0, 0.3); /* Revised: Changed background opacity to 0.3 */
+      background: rgba(0, 0, 0, 0.3);
+margin: 20px auto;
+max-width: 1000px;
+border-radius: 10px;
+@@ -122,7 +123,6 @@
+.rsvp-btn:hover {
+background: #e6c799;
+}
+    /* Save the Date & Entourage side by side */
+.video-container {
+display: flex;
+flex-wrap: wrap;
+@@ -145,34 +145,36 @@
+color: #ffddaa;
+font-style: italic;
+}
+    /* Responsive image for mood board and entourage list */
+.moodboard-item img, .video-box img {
+max-width: 100%;
+height: auto;
+}
+    /* Media query to stack elements and resize fonts on smaller screens */
 
-<style>
-    body {
-        margin: 0;
-        font-family: "Georgia", serif;
-        color: #fff;
-        text-align: center;
-        overflow-x: hidden;
-    }
-
-    /* ✅ PARALLAX BACKGROUND */
-    .hero {
-        background-image: url("background.jpg");
+    /* 📌 MOBILE / TABLET RESPONSIVENESS FOR BACKGROUND + TEXT */
+@media (max-width: 768px) {
+        /* Make fonts smaller for phones */
+        h1 {
+            font-size: 2.5rem;
+        }
+        .tagline {
+            font-size: 1.1rem;
+        }
+        /* Make content sections smaller */
+        section {
+            padding: 30px 15px;
+            margin: 15px auto;
+        }
+        .video-box {
+            max-width: 100%;
+        }
+        body {
+            background-attachment: scroll;
+        }
+      h1 {
+        font-size: 2.5rem;
+      }
+      .tagline {
+        font-size: 1.1rem;
+      }
+      section {
+        padding: 30px 15px;
+        margin: 15px auto;
+      }
+      .video-box {
+        max-width: 100%;
+      }
+      /* FIX background behavior on phones */
+      body {
+        background-attachment: scroll !important;
         background-size: cover;
         background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;   /* Parallax effect */
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    /* Overlay for dramatic look */
-    .overlay {
-        background: rgba(0, 0, 0, 0.45);
-        padding: 40px;
-        border-radius: 10px;
-    }
-
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 10px;
-    }
-
-    h2 {
-        font-size: 1.6rem;
-        font-weight: 300;
-    }
-
-    /* ✅ CONTENT AFTER HERO */
-    .content {
-        background: #0f0f0f;
-        padding: 40px 25px;
-        color: #ddd;
-        line-height: 1.7;
-    }
-
-    /* ✅ BETTER MOBILE HANDLING FOR PARALLAX */
-    @media (max-width: 768px) {
-        .hero {
-            background-attachment: scroll; /* Prevents excessive zoom on phones */
-        }
-        h1 {
-            font-size: 2.2rem;
-        }
-        h2 {
-            font-size: 1.2rem;
-        }
-    }
+      }
+}
 </style>
 </head>
 
 <body>
 
-<section class="hero">
-    <div class="overlay">
-        <h1>Aaron & Fianceé</h1>
-        <h2>Our Enchanted Forest Wedding</h2>
-        <p>December 2025</p>
-    </div>
+<header>
+@@ -204,13 +206,13 @@ <h2>Location</h2>
+<img src="church.jpg" alt="Church">
+<h3>Our Lady of Lourdes Parish</h3>
+<p>Our wedding ceremony will be held at the church.</p>
+        <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/@14.1112325,120.9548224,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd7764459f8ce3:0xe729ecd446058e72!8m2!3d14.1112325!4d120.9573973!16s%2Fg%2F1v41xzyh?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
+</div>
+<div class="location-card">
+<img src="reception.jpg" alt="Reception">
+<h3>Fruella's Events Venue</h3>
+<p>Join us for the celebration at the reception venue.</p>
+        <a class="guide-btn" href="https://www.google.com/maps/place/Fruella's+Events+Venue+Tagaytay/@14.1328031,120.9266371,17z/data=!3m1!4b1!4m6!3m5!1s0x33bd796d1fd7f119:0x5fccd52277bc6f1!8m2!3d14.1327979!4d120.931508!16s%2Fg%2F11v0gyk507?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Guide</a>
+        <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
+</div>
+</div>
+</section>
+@@ -262,7 +264,6 @@ <h2>Save the Date & Entourage</h2>
 </section>
 
-<section class="content">
-    <h2>Welcome to Our Story</h2>
-    <p>
-        This enchanted space is where our journey comes to life — where nature,
-        love, and magic intertwine.
-    </p>
-</section>
-
-</body>
-</html>
+<script>
+    // Countdown Script
+const countdown = document.getElementById("countdown");
+const weddingDate = new Date("April 16, 2026 00:00:00").getTime();
