--- a/index.html
+++ b/index.html
@@ -4,102 +4,101 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Aaron & Jade Wedding</title>
-
 <style>
-body {
+  body {
     font-family: 'Georgia', serif;
     margin: 0;
     padding: 0;
-    background: url('Background.jpg') no-repeat center center fixed;
+    background: url('Background.jpg') no-repeat center center;
     background-size: cover;
     color: white;
     text-align: center;
-}
+  }
 
-header {
+  header {
     background: rgba(0, 0, 0, 0.5);
     padding: 20px;
-}
+  }
 
-nav {
+  nav {
     margin: 15px 0;
-}
+  }
 
-nav a {
+  nav a {
     color: white;
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
-}
+  }
 
-h1 {
+  h1 {
     font-size: 4rem;
     margin-bottom: 10px;
-}
+  }
 
-.tagline {
+  .tagline {
     font-size: 1.5rem;
     font-style: italic;
-}
+  }
 
-section {
+  section {
     padding: 40px 20px;
     background: rgba(0, 0, 0, 0.3);
     margin: 20px auto;
     max-width: 1000px;
     border-radius: 10px;
-}
+  }
 
-#calendar {
+  #calendar {
     display: flex;
     justify-content: center;
-}
+  }
 
-#calendar img {
+  #calendar img {
     width: 80%;
     max-width: 700px;
     height: auto;
     border-radius: 8px;
-}
+  }
 
-#countdown {
+  #countdown {
     font-size: 1.8rem;
     font-weight: bold;
     margin-bottom: 20px;
     color: #ffddaa;
-}
+  }
 
-.divider {
+  .divider {
     width: 60px;
     height: 4px;
     background: #ffddaa;
     margin: 15px auto 25px auto;
     border-radius: 2px;
-}
+  }
 
-.location-container {
+  .location-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
-}
+  }
 
-.location-card {
+  .location-card {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 12px;
     padding: 20px;
     width: 300px;
     text-align: center;
     box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-}
+  }
 
-.location-card img {
+  .location-card img {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 15px;
-}
+  }
 
-.guide-btn {
+  .guide-btn {
     display: inline-block;
     padding: 10px 20px;
     background: #ffddaa;
@@ -108,27 +107,27 @@ section {
     border-radius: 8px;
     font-weight: bold;
     transition: 0.3s;
-}
+  }
 
-.guide-btn:hover {
+  .guide-btn:hover {
     background: #e6c799;
-}
+  }
 
-.rsvp-message {
+  .rsvp-message {
     font-size: 1.4rem;
     font-style: italic;
     font-family: 'Georgia', 'Times New Roman', serif;
     color: #f8e6d4;
     margin-bottom: 15px;
-}
+  }
 
-.rsvp-instruction {
+  .rsvp-instruction {
     font-size: 1rem;
     color: #ffddaa;
     margin-bottom: 25px;
-}
+  }
 
-.rsvp-btn {
+  .rsvp-btn {
     display: inline-block;
     padding: 12px 25px;
     background: #ffddaa;
@@ -137,168 +136,111 @@ section {
     border-radius: 8px;
     font-weight: bold;
     transition: 0.3s;
-}
+  }
 
-.rsvp-btn:hover {
+  .rsvp-btn:hover {
     background: #e6c799;
-}
+  }
 
-.video-container {
+  .video-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
     align-items: flex-start;
-}
+  }
 
-.video-box {
+  .video-box {
     flex: 1 1 45%;
     max-width: 45%;
-}
+  }
 
-.video-box video {
+  .video-box video {
     width: 100%;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-}
+  }
 
-.video-caption {
+  .video-caption {
     margin-top: 15px;
     font-size: 1.1rem;
     color: #ffddaa;
     font-style: italic;
-}
+  }
 
-.moodboard-item img, .video-box img {
+  .moodboard-item img, .video-box img {
     max-width: 100%;
     height: auto;
-}
+  }
 
-/* ✅ FIX: Prevent zoom issue on mobile */
-@media (max-width: 768px) {
-    h1 { font-size: 2.5rem; }
-    .tagline { font-size: 1.1rem; }
-    section { padding: 30px 15px; margin: 15px auto; }
-    .video-box { max-width: 100%; }
-    body { background-attachment: scroll; } /* prevents mobile zoom */
-}
+  @media (max-width: 768px) {
+    h1 {
+      font-size: 2.5rem;
+    }
+
+    .tagline {
+      font-size: 1.1rem;
+    }
+
+    section {
+      padding: 30px 15px;
+      margin: 15px auto;
+    }
+
+    .video-box {
+      max-width: 100%;
+    }
+  }
 </style>
 </head>
 
 <body>
-
 <header>
-    <h1>Aaron & Jade</h1>
-    <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
-    <nav>
-        <a href="#event">Event</a>
-        <a href="#rsvp">RSVP</a>
-        <a href="#savethedate">Save the Date</a>
-        <a href="#location">Location</a>
-        <a href="#registry">Registry</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#faq">FAQ</a>
-    </nav>
+  <h1>Aaron & Jade</h1>
+  <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
+  <nav>
+    <a href="#event">Event</a>
+    <a href="#rsvp">RSVP</a>
+    <a href="#savethedate">Save the Date</a>
+    <a href="#location">Location</a>
+    <a href="#registry">Registry</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#faq">FAQ</a>
+  </nav>
 </header>
 
 <section id="event">
-    <div id="countdown"></div>
-    <div id="calendar">
-        <img src="April 2026.jpg" alt="Wedding Week Calendar">
-    </div>
+  <div id="countdown"></div>
+  <div id="calendar">
+    <img src="April 2026.jpg" alt="Wedding Week Calendar">
+  </div>
 </section>
 
 <section id="location">
-    <h2>Location</h2>
-    <div class="divider"></div>
-    <div class="location-container">
-        <div class="location-card">
-            <img src="church.jpg" alt="Church">
-            <h3>Our Lady of Lourdes Parish</h3>
-            <p>Our wedding ceremony will be held at the church.</p>
-            <a class="guide-btn" href="https://www.google.com/maps/place/Our+Lady+of+Lourdes+Parish+Church+-+Silang+Junction+North,+Tagaytay+City,+Cavite+(Diocese+of+Imus)/" target="_blank">Guide</a>
-        </div>
-        <div class="location-card">
-            <img src="reception.jpg" alt="Reception">
-            <h3>Fruella's Events Venue</h3>
-            <p>Join us for the celebration at the reception venue.</p>
-            <a class="guide-btn" href="https://www.google.com/maps/place/Fruella's+Events+Venue+Tagaytay/" target="_blank">Guide</a>
-        </div>
+  <h2>Location</h2>
+  <div class="divider"></div>
+  <div class="location-container">
+    <div class="location-card">
+      <img src="church.jpg" alt="Church">
+      <h3>Our Lady of Lourdes Parish</h3>
+      <p>Our wedding ceremony will be held at the church.</p>
+      <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
     </div>
+    <div class="location-card">
+      <img src="reception.jpg" alt="Reception">
+      <h3>Fruella's Events Venue</h3>
+      <p>Join us for the celebration at the reception venue.</p>
+      <a class="guide-btn" href="https://www.google.com/maps" target="_blank">Guide</a>
+    </div>
+  </div>
 </section>
 
 <section id="moodboard">
-    <h2>Mood Board & Color Motifs</h2>
-    <div class="divider"></div>
-    <div class="moodboard-container">
-        <div class="moodboard-item">
-            <img src="Mood Board.png" alt="Mood Board">
-            <p>Mood Board</p>
-        </div>
-        <div class="moodboard-item">
-            <img src="Color Motif.png" alt="Color Palette">
-            <p>Color Palette</p>
-        </div>
+  <h2>Mood Board & Color Motifs</h2>
+  <div class="divider"></div>
+  <div class="moodboard-container">
+    <div class="moodboard-item">
+      <img src="Mood Board.png" alt="Mood Board">
+      <p>Mood Board</p>
     </div>
-</section>
-
-<section id="rsvp">
-    <h2>RSVP</h2>
-    <div class="divider"></div>
-    <p class="rsvp-message">
-        We would be honored by your presence on our wedding day.<br>
-        Kindly confirm your attendance by clicking the button below:
-    </p>
-    <p class="rsvp-instruction">
-        ✦ Please make sure to enter your <strong>Full Name</strong> in the format <em>FirstName LastName (FN LN)</em> when submitting your RSVP.
-    </p>
-    <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
-</section>
-
-<section id="savethedate">
-    <h2>Save the Date & Entourage</h2>
-    <div class="divider"></div>
-    <div class="video-container">
-        <div class="video-box">
-            <video controls autoplay muted loop>
-                <source src="savethedate.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
-        </div>
-        <div class="video-box">
-            <img src="entourage-list.jpg" alt="Our Entourage">
-            <p class="video-caption">Meet our cherished entourage — the people who’ll stand beside us.</p>
-        </div>
-    </div>
-</section>
-
-<script>
-// ✅ FIXED COUNTDOWN SCRIPT
-const countdown = document.getElementById("countdown");
-const weddingDate = new Date("April 16, 2026 00:00:00").getTime();
-
-function updateCountdown() {
-    const now = new Date().getTime();
-    const distance = weddingDate - now;
-
-    if (distance <= 0) {
-        countdown.innerHTML = "It's our wedding day!";
-        clearInterval(interval);
-        return;
-    }
-
-    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-    countdown.innerHTML = `Countdown: ${days}d ${hours}h ${minutes}m ${seconds}s`;
-}
-
-const interval = setInterval(updateCountdown, 1000);
-updateCountdown();
-</script>
-
-</body>
-</html>
+    <div class="moodboard-item">
