--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     font-family: 'Georgia', serif;
     margin: 0;
     padding: 0;
-    background: url('Background.jpg') no-repeat center center;
+    background: url('Background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
     text-align: center;
@@ -173,24 +173,6 @@
     height: auto;
   }
 
-  @media (max-width: 768px) {
-    h1 {
-      font-size: 2.5rem;
-    }
-
-    .tagline {
-      font-size: 1.1rem;
-    }
-
-    section {
-      padding: 30px 15px;
-      margin: 15px auto;
-    }
-
-    .video-box {
-      max-width: 100%;
-    }
-  }
 </style>
 </head>
 
@@ -283,7 +265,6 @@
 </section>
 
 <script>
-  // ✅ Fixed Countdown Script
   const countdown = document.getElementById("countdown");
   const weddingDate = new Date("April 16, 2026 00:00:00").getTime();
 
