Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -252,12 +252,8 @@
         <div class="divider"></div>
         <div class="moodboard-container">
           <div class="moodboard-item">
-            <img src="Mood Board.png" alt="Mood Board">
+            <img src="Mood Board Final.png" alt="Mood Board">
             <p>Mood Board</p>
-          </div>
-          <div class="moodboard-item">
-            <img src="Color Motif.png" alt="Color Palette">
-            <p>Color Palette</p>
           </div>
         </div>
     </div>
@@ -327,3 +323,4 @@
 
 </body>
 </html>
+
