--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="divider"></div>
         <div class="moodboard-container">
           <div class="moodboard-item">
-            <img src="Mood Board Final.png" alt="Mood Board">
+            <img src="Mood Board Finaal.png" alt="Mood Board">
           </div>
         </div>
     </div>
@@ -319,6 +319,7 @@
 
 </body>
 </html>
+
 
 
 
