Fix HTML entity encoding and duplicate content

--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
     /* Single Content Box Styling (for video and entourage) */
     .single-box-container {
         display: flex;
-        justify-content: center; /* Center the box */
-        /* Change from flex-row to flex-column if you want the two boxes in Entourage to stack */
+        /* Set to column to stack the two entourage images */
         flex-direction: column; 
         align-items: center;
         gap: 20px; /* Space between the two entourage boxes */
